[gd_scene load_steps=12 format=3 uid="uid://fvccgl4bk24e"]

[ext_resource type="Script" uid="uid://v2vpu6ugooq5" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://d4h4hok87fv62" path="res://Images/Logo.png" id="2_8ln24"]
[ext_resource type="Texture2D" uid="uid://c2mm7aeo0l0rf" path="res://Images/PlayButton.png" id="3_rtw2f"]
[ext_resource type="Texture2D" uid="uid://dvs5t3ep0ocf6" path="res://Images/CreditsButton.png" id="4_oa1go"]
[ext_resource type="Texture2D" uid="uid://b2h23h3il4xcn" path="res://Images/PlayButtonPressed.png" id="4_rtw2f"]
[ext_resource type="Texture2D" uid="uid://ct45kn8mofvu7" path="res://Images/PlayButtonHover.png" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dff27tdku3j7j" path="res://Images/ExitButton.png" id="5_tbmy8"]
[ext_resource type="Texture2D" uid="uid://clodtjh4ee1nq" path="res://Images/CreditsButtonPressed.png" id="7_lgwnu"]
[ext_resource type="Texture2D" uid="uid://bdf0ou7fm43s6" path="res://Images/CreditsButtonHover.png" id="8_flqon"]
[ext_resource type="Texture2D" uid="uid://cxss8bf4jymrv" path="res://Images/ExitButtonPressed.png" id="10_rcqid"]
[ext_resource type="Texture2D" uid="uid://bh4vmarrfs4ov" path="res://Images/ExitButtonHover.png" id="11_1ajci"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 128

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(512, 256)
layout_mode = 2
texture = ExtResource("2_8ln24")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(320, 128)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_rtw2f")
texture_pressed = ExtResource("4_rtw2f")
texture_hover = ExtResource("4_tbmy8")
stretch_mode = 0

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(320, 128)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_oa1go")
texture_pressed = ExtResource("7_lgwnu")
texture_hover = ExtResource("8_flqon")
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(320, 128)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_tbmy8")
texture_pressed = ExtResource("10_rcqid")
texture_hover = ExtResource("11_1ajci")
stretch_mode = 0
